@@ -1,3 +1,6 @@
+17 March 2016: Ralph
+	- Limit number of QNAME minimisation iterations.
+
 17 March 2016: Wouter
 	- Fix #746: Fix unbound sets CD bit on all forwards.
 	  If no trust anchors, it'll not set CD bit when forwarding to another
